# bookcover-wallpaper

./: .gitignore  Makefile  README.md  pyproject.toml
src/bookcover_wallpaper/: __init__.py  cli.py  config.py  covers.py  image.py  layout.py
src/bookcover_wallpaper/sources/: __init__.py  base.py  goodreads.py  local.py  search.py
tests/: test_cli.py  test_generation.py  test_sources.py
